@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2013 IBM Corporation and others.
+ * Copyright (c) 2006, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -1833,7 +1833,7 @@ public class InternalTreeModelViewer extends TreeViewer implements IInternalTree
 	            	if (!accepted) {
 	            		item.setChecked(!checked);
 	            	} else {
-	            	    item.setData(PREV_CHECKED_KEY, new Boolean(checked));
+	            	    item.setData(PREV_CHECKED_KEY, Boolean.valueOf(checked));
 	            	}
 	            } else {
 		            ((TreeModelContentProvider) contentProvider).cancelRestore(path, IModelDelta.SELECT|IModelDelta.REVEAL);
